# algorand-otc

./: .algokit.toml  README.md  algorand-otc.code-workspace
.algokit/: .copier-answers.yml
projects/algorand-otc-contracts/: .algokit.toml  README.md  pyproject.toml
projects/algorand-otc-contracts/.algokit/: .copier-answers.yml
projects/algorand-otc-contracts/smart_contracts/artifacts/otc/: OTCSwap.approval.puya.map  OTCSwap.approval.teal  OTCSwap.arc56.json  otc_swap_client.py
projects/algorand-otc-contracts/smart_contracts/otc/: contract.py  deploy_config.py
projects/algorand-otc-frontend/: .algokit.toml  README.md  package-lock.json  package.json
projects/algorand-otc-frontend/.algokit/: .copier-answers.yml
projects/algorand-otc-frontend/src/: App.tsx  config.ts  dummyData.ts  perawallet.ts
projects/algorand-otc-frontend/src/components/: AppCalls.tsx  BrowseOffers.tsx  CreateOffer.tsx  Header.tsx  LandingPage.tsx  Sidebar.tsx
projects/algorand-otc-frontend/src/contracts/: Escrow.ts  OTCSwap.ts  Otc.ts
projects/algorand-otc-frontend/src/styles/: App.css
projects/algorand-otc-frontend/src/utils/: algodClient.ts  indexerClient.ts
