[tool.poetry]
name = "algorand-otc-contracts"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["Srizdebnath <srizd449@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
python-dotenv = "^1.0.0"
algorand-python = "^2.0.0"
algorand-python-testing = "~0"

[tool.poetry.group.dev.dependencies]
puyapy = "*"
algokit-utils = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

